# linux-voice-control

./: install.sh  linux-voice-control  linux-voice-control-gui  pyproject.toml  test_installation.py  update.sh
lvc/: basic_mode_manager.py  chatgpt_port.py  command_manager.py  live_mode_setup.py  main.py  master_control_mode_setup.py  master_mode_manager.py  notifier.py  voice_feedback.py
lvc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
