[project]
name = "lvc"
version = "0.1.0"
description = "Voice control system for Linux with AI-powered speech recognition and command execution"
authors = [{ name = "Shane", email = "shane@example.com" }]
readme = "README.md"
keywords = ["voice-control", "speech-recognition", "linux", "ai", "automation"]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: System :: Systems Administration",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"

dependencies = [
    "numpy>=1.26.2",
    "tqdm",
    "more-itertools",
    "transformers>=4.19.0",
    "ffmpeg-python==0.2.0",
    "click~=8.1.3",
    "pyaudio~=0.2.11",
    "pydub",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "openai>=1.0.0",
    "torch>=2.0.0",
    "thefuzz~=0.19.0",
    "termcolor~=2.0.1",
    "gTTS>=2.3.0",
    "mpv~=0.1",
    "librosa~=0.9.2",
    "soundfile~=0.11.0",
]

[project.urls]
Repository = "https://github.com/your-org/linux-voice-control"

[project.scripts]
lvc = "lvc.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "ruff>=0.9.10",
    "pytest>=8.3.5",
    "poethepoet>=0.34.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lvc*"]
exclude = []

# Task runner
[tool.poe.tasks]
check = "uv run ruff check"
format = "uv run ruff format"
typecheck = "uv run pyright"
lint = ["format", "check"]

[tool.poe.tasks.test]
shell = "mkdir test-reports || true && uv run pytest -v tests/ --junitxml=test-reports/junit.xml"

[tool.pyright]
include = ["lvc", "tests"]
exclude = ["**/.venv", "tmp/", "**/node_modules/", "**/__pycache__", "**/*.pyc", "gui/", "lvc_gui_flutter/", "pretrained_models/"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = 1

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
exclude = [".git", ".venv", "**/node_modules/", "**/.volta", "gui/", "lvc_gui_flutter/", "pretrained_models/"]
fix = true
respect-gitignore = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "YTT", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
extend-per-file-ignores = { "**/__init__.py" = ["I", "F403"] }
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstrings
    "S101",  # Use of assert
    "T201",  # Print statements
    "FBT001", "FBT002",  # Boolean trap
    "PLR0913",  # Too many arguments
    "C901",  # Complex structure
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"